[gd_scene load_steps=9 format=3 uid="uid://jxppw8syh3ni"]

[ext_resource type="Script" path="res://scenes/ui/minimap/minimap.gd" id="1_qrkje"]
[ext_resource type="PackedScene" uid="uid://dy7eq70olddga" path="res://scenes/ui/POI Manager/poi_manager.tscn" id="2_vktws"]
[ext_resource type="Texture2D" uid="uid://b716678pi8f2c" path="res://assets/ui/radar/radar.png" id="2_wptqw"]
[ext_resource type="Texture2D" uid="uid://iybr46mjrovs" path="res://assets/ui/radar/radar bg.png" id="3_d8p0r"]
[ext_resource type="Texture2D" uid="uid://c8daasvxqwr8m" path="res://assets/ui/radar/Dot White.png" id="4_uuq8y"]
[ext_resource type="Texture2D" uid="uid://c2vtyajjv1ov8" path="res://assets/ui/radar/Player Arrow.png" id="5_n520u"]
[ext_resource type="Texture2D" uid="uid://cv3v3brtmmlli" path="res://assets/ui/radar/boss icon.png" id="7_mnhki"]
[ext_resource type="Texture2D" uid="uid://du3t67lb6w8bl" path="res://assets/ui/radar/HangarIcon.png" id="8_2norb"]

[node name="Minimap" type="BoxContainer"]
script = ExtResource("1_qrkje")

[node name="PoiManager" parent="." instance=ExtResource("2_vktws")]

[node name="Grid" type="Sprite2D" parent="."]
position = Vector2(96, -96)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_wptqw")

[node name="Screen" type="Sprite2D" parent="Grid"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
clip_children = 2
z_index = 5
position = Vector2(-1.5, 1)
texture = ExtResource("3_d8p0r")

[node name="DotPlanet" type="Sprite2D" parent="Grid/Screen"]
modulate = Color(0, 0.533333, 0, 1)
show_behind_parent = true
position = Vector2(164, -181)
scale = Vector2(0.3125, 0.3125)
texture = ExtResource("4_uuq8y")

[node name="DotEnemy" type="Sprite2D" parent="Grid/Screen"]
self_modulate = Color(0.843137, 0, 0, 1)
show_behind_parent = true
position = Vector2(204, -148.5)
scale = Vector2(0.135417, 0.135417)
texture = ExtResource("4_uuq8y")

[node name="DotSpawner" type="Sprite2D" parent="Grid/Screen"]
self_modulate = Color(0.843137, 0, 0, 1)
show_behind_parent = true
position = Vector2(184, -161)
scale = Vector2(0.229167, 0.229167)
texture = ExtResource("4_uuq8y")

[node name="PlayerArrow" type="Sprite2D" parent="Grid/Screen"]
show_behind_parent = true
z_index = 1
position = Vector2(-1, -1)
scale = Vector2(0.533334, 0.533334)
texture = ExtResource("5_n520u")

[node name="DotSun" type="Sprite2D" parent="Grid/Screen"]
modulate = Color(0.819608, 0.803922, 0, 1)
position = Vector2(189, -181)
scale = Vector2(0.266927, 0.266927)
texture = ExtResource("4_uuq8y")

[node name="OtherPlayerArrow" type="Sprite2D" parent="Grid/Screen"]
self_modulate = Color(1, 0.101961, 0, 1)
show_behind_parent = true
position = Vector2(219, -136)
scale = Vector2(0.555557, 0.555557)
texture = ExtResource("5_n520u")

[node name="BossIcon" type="Sprite2D" parent="Grid/Screen"]
show_behind_parent = true
position = Vector2(219, -166)
scale = Vector2(1.5625, 1.5625)
texture = ExtResource("7_mnhki")

[node name="HangarIcon" type="Sprite2D" parent="Grid/Screen"]
show_behind_parent = true
position = Vector2(186.5, -188.5)
scale = Vector2(0.694444, 0.694444)
texture = ExtResource("8_2norb")

[node name="PanelContainer" type="PanelContainer" parent="Grid"]
offset_left = -183.5
offset_top = -344.5
offset_right = -59.5
offset_bottom = -311.5
scale = Vector2(3, 3)

[node name="MarginContainer" type="MarginContainer" parent="Grid/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_lock_ = true

[node name="LocalizationLabel" type="Label" parent="Grid/PanelContainer/MarginContainer"]
layout_mode = 2
text = "120, 1337"
horizontal_alignment = 1
vertical_alignment = 1
